--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,14 +46,14 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2.0.1
-
+      
       - name: Build, tag, and push Docker image to ECR
         run: |
           # Construir la imagen Docker y etiquetarla en un solo paso
-          docker build -t ${{ steps.ecr-actions.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest .
-      
+          docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY_NAME }}:latest .
+          
           # Empujar la imagen construida al repositorio de ECR
-          docker push ${{ steps.ecr-actions.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
       # Actualizar el servicio de ECS para hacer un despliegue con la nueva imagen
       - name: Update ECS service on Fargate
