--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,9 @@ jobs:
 
       - name: Verificar estado del despliegue en Fargate
         run: |
+          echo "Esperando 10 segundos para que el nuevo servicio se inicie..."
+          sleep 10
+        
           # Obtener el estado del servicio ECS
           SERVICE_STATUS=$(aws ecs describe-services --cluster deployFargate-cluster --services testFargate-service --query "services[0].status" --output text)
           
@@ -74,40 +77,7 @@ jobs:
             echo "Error: El servicio no está activo. Estado del servicio: $SERVICE_STATUS"
             exit 1
           fi
-          
-          # Forzar un nuevo despliegue
-          echo "Forzando un nuevo despliegue..."
-          aws ecs update-service --cluster deployFargate-cluster --service testFargate-service --force-new-deployment
       
-          # Esperar un momento para que el servicio inicie la nueva tarea
-          echo "Esperando a que el nuevo servicio se inicie..."
-          sleep 10  # Ajusta el tiempo de espera según lo que necesites
-      
-          # Obtener todas las tareas asociadas al servicio (se actualizarán tras el despliegue)
-          TASK_ID=$(aws ecs list-tasks --cluster deployFargate-cluster --service-name testFargate-service --desired-status RUNNING --query "taskArns[0]" --output text)
+          # Obtener la última tarea creada que esté en estado RUNNING
+          TASK_ID=$(aws ecs list-tasks --cluster deployFargate-cluster --service-name testFargate-service --desired-status RUNNING --query "taskArns[-1]" --output text)
           echo "ID de la nueva tarea en ejecución: $TASK_ID"
-          
-          # Verificar si no hay tareas en ejecución
-          if [ "$TASK_ID" == "None" ]; then
-            echo "Error: No hay tareas en ejecución en el servicio."
-            exit 1
-          fi
-      
-          # Esperar hasta que la tarea esté en estado RUNNING
-          while true; do
-            TASK_STATUS=$(aws ecs describe-tasks --cluster deployFargate-cluster --tasks $TASK_ID --query "tasks[0].lastStatus" --output text)
-            if [ "$TASK_STATUS" == "RUNNING" ]; then
-              break
-            fi
-            echo "Esperando que la tarea inicie... Estado actual: $TASK_STATUS"
-            sleep 5
-          done
-          
-          # Verificar eventos del servicio para detectar errores comunes
-          EVENTS=$(aws ecs describe-services --cluster deployFargate-cluster --services testFargate-service --query "services[0].events" --output text)
-          if [[ "$EVENTS" == *"Unable to place a task"* || "$EVENTS" == *"Insufficient capacity"* || "$EVENTS" == *"Task definition not found"* ]]; then
-            echo "Error crítico en el despliegue: $EVENTS"
-            exit 1
-          fi
-          
-          echo "El servicio está activo y las tareas están corriendo correctamente."
