--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,10 +48,18 @@ jobs:
         run: |
           echo "Esperando a que el nuevo servicio inicie..."
           
-          # Obtener el ID de la última tarea en ejecución antes de forzar el despliegue
-          PREVIOUS_TASK_ID=$(aws ecs list-tasks --cluster deployFargate-cluster --service-name testFargate-service --desired-status RUNNING --query "taskArns[-1]" --output text)
-          echo "ID de la última tarea en ejecución antes de despliegue: $PREVIOUS_TASK_ID"
-      
-          CURRENT_TASK_ID=$(aws ecs list-tasks --cluster deployFargate-cluster --service-name testFargate-service --desired-status PENDING --query "taskArns[-1]" --output text)
-          # Imprimir el valor de CURRENT_TASK_ID
-          echo "El ID de la tarea es: $CURRENT_TASK_ID"
+          # Bucle para verificar el estado de las tareas pendientes
+          TASK_PENDING=true
+          while [ "$TASK_PENDING" == "true" ]; do
+            # Obtener la última tarea pendiente
+            CURRENT_TASK_ID=$(aws ecs list-tasks --cluster deployFargate-cluster --service-name testFargate-service --desired-status PENDING --query "taskArns[-1]" --output text)
+            
+            # Si el ID no es "None", significa que la tarea está pendiente
+            if [ "$CURRENT_TASK_ID" != "None" ]; then
+              TASK_PENDING=false
+              echo "La tarea pendiente encontrada: $CURRENT_TASK_ID"
+            else
+              echo "No se encontraron tareas pendientes, esperando 2 segundos..."
+              sleep 2  # Espera 2 segundos antes de volver a verificar
+            fi
+          done
